@@ -29,7 +29,6 @@
                         -Xmx64m
                         -XX:+UseG1GC
                         -Xlog:gc*:./gc/gc.log
-                        -XX:+PrintGCDetails
                     </jvmArguments>
                     <fork>true</fork>
                 </configuration>
